# tee_teeos_host

./: .gitmodules  CMakeLists.txt
sel4_tool/: CMakeLists.txt  Makefile  circ_buf.h  ree_tee_msg.h  sel4_circ.h  sel4_log.h  sel4_req.c  sel4_req.h  sel4_tool.c  sel4_tool_cmdline.c  sel4_tool_cmdline.h  sel4_tty_rpmsg.c  sel4_tty_rpmsg.h
